# pandemic

./: Board.cpp  Board.hpp  CMakeLists.txt  City.cpp  City.hpp  Color.hpp  Demo1.cpp  Dispatcher.cpp  Dispatcher.hpp  FieldDoctor.cpp  FieldDoctor.hpp  GeneSplicer.cpp  GeneSplicer.hpp  Medic.cpp  Medic.hpp  OperationsExpert.cpp  OperationsExpert.hpp  Player.cpp  Player.hpp  Researcher.cpp  Researcher.hpp  Scientist.cpp  Scientist.hpp  Test.cpp  Virologist.cpp  Virologist.hpp  main.cpp  test1  test2  test3
sources/: Board.cpp  Board.hpp  City.hpp  Color.hpp  Dispatcher.cpp  FieldDoctor.cpp  FieldDoctor.hpp  GeneSplicer.cpp  GeneSplicer.hpp  Medic.cpp  Medic.hpp  OperationsExpert.cpp  OperationsExpert.hpp  Player.cpp  Player.hpp  Researcher.cpp  Researcher.hpp  Scientist.cpp  Scientist.hpp  Virologist.cpp
